testdata/baselines/reference/submodule/compiler/javascriptCommonjsModule.errors.txt
index.js(3,19): error TS8010: Type annotations can only be used in TypeScript files.


==== index.js (1 errors) ====
    class Foo {}
    
    class Bar extends Foo {}
                      ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
    module.exports = Bar;
    